2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	UVariable::UVarSet
	* src/utypes.hh (UVarSet): Move to...
	* src/uvariable.hh (UVariable::UVarSet): here.
	Adjust all uses.
	Remove tautologic (and incorrect) documentation.
	(setName): Move the implementations into the *.cc file.
	(uvalue.hh, ustring.hh): Remove the includes.
	Adjust all users that did not properly include uvalue.hh.
	* src/userver.cc (UServer::work): Remove the useless variable
	selfError. That frees us from additional includes.

2006-12-26  Akim Demaille  <akim.demaille@free.fr>

	s/CMD_//
	* src/ucommand.hh (Type): Remove the CMD_ prefix.
	Adjust all uses.

	* src/parser/bison/ugrammar.y: More "tag" uses.

2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	More restyling.
	* src/ucommand.cc,
	* src/ucommandqueue.cc,
	* src/uexpression.cc,
	* src/uobj.cc,
	* src/uvalue.cc,
	* src/uvar.cc,
	* src/uvariablename.cc: Restyle. Formatting changes. Some potentially
	  dangerous default cases were removed. If they were intended, rewrite
	  them as:
	  default: /* skip */
	    break;
	  Meanwhile we have more compiler warnings about cases not handled in
	  switch.

2006-12-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Restyle.
	* src/ucommand.cc,
	* src/ucommandqueue.cc,
	* src/uconnection.cc,
	* src/ueventhandler.cc,
	* src/ueventmatch.cc,
	* src/uexpression.cc,
	* src/ugroup.cc,
	* src/uobj.cc,
	* src/uobject.cc,
	* src/uqueue.cc,
	* src/uvalue.cc,
	* src/uvar.cc,
	* src/uvariable.cc,
	* src/uvariablename.cc,
	* src/uvariablename.hh: Here. Formating changes.

2006-12-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	This should have been done much sooner...
	change 'inherit' to 'inherits' 
	* src/parser/bison/ugrammar.y: done.
	* src/parser/bison/utoken.l: done.

2006-12-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	change email notification to kernel1@gostai.com 
	* vcs/local.rb: done.

2006-12-25  Akim Demaille  <akim.demaille@free.fr>
