@@ -44,7 +44,7 @@ UGroup::~UGroup()
 }
 
 
-/*
+#if 0
 UValue * UGroup::list( UVariableName *variable)
 {
   //do read
@@ -56,48 +56,48 @@ UValue * UGroup::list( UVariableName *variable)
   bool first = true;
 
   for (std::list<UAlias*>::iterator it = gr->members.begin();
-      (it != gr->members.end()) && current ;
-      it++)
-      {
-    UValue *n;
-    if ((*it)->members.empty()) { //terminal group, handle it for him
-      //child node
-      char vname[1024];
-      strcpy(vname, (*it)->device->str());
-      strcat(vname, ".");
-      strcat(vname, variable->method->str());
-      if ( ::urbiserver->variabletab.find(vname) ==  ::urbiserver->variabletab.end())
-      {
-	//no variable? could be...
-	n=new UValue("null");
-      }
+       (it != gr->members.end()) && current ;
+       it++)
+    {
+      UValue *n;
+      if ((*it)->members.empty())
+	{
+	  //terminal group, handle it for him
+	  //child node
+	  char vname[1024];
+	  strcpy(vname, (*it)->device->str());
+	  strcat(vname, ".");
+	  strcat(vname, variable->method->str());
+	  if ( ::urbiserver->variabletab.find(vname) ==  ::urbiserver->variabletab.end())
+	    //no variable? could be...
+	    n=new UValue("null");
+	  else
+	    n = ::urbiserver->variabletab[vname]->get()->copy();
+	}
+
       else
-	n = ::urbiserver->variabletab[vname]->get()->copy();
+	n =  ::urbiserver->grouptab[(*it)->device->str()]->list(variable);
+
+      //    while (n && n->dataType == DATA_LIST)
+      {
+	//      UValue * nn = n->list;
+	//      n->list=  0;
+	//      delete n;
+	//      n=nn;
+	//    }
+
+	if (first)
+	  current->liststart =n;
+	else
+	  current->next = n;
+	current = n;
+
+	//current->list = n;
+	//    while (current->list)
+	//      current = current->list;
+
+	first = false;
+      }
+      return val;
     }
-
-    else
-      n =  ::urbiserver->grouptab[(*it)->device->str()]->list(variable);
-
-//    while (n && n->dataType == DATA_LIST)
-{
-//      UValue * nn = n->list;
-//      n->list=  0;
-//      delete n;
-//      n=nn;
-//    }
-
-    if (first)
-      current->liststart =n;
-    else
-      current->next = n;
-    current = n;
-
-//current->list = n;
-//    while (current->list)
-//      current = current->list;
-
-    first = false;
-  }
-  return val;
-}
-*/
+#endif
