@@ -1,5 +1,10 @@
 2006-12-26  Akim Demaille  <akim.demaille@free.fr>
 
+	Use #if 0 to comment out code
+	* src/ugroup.cc: here.
+
+2006-12-26  Akim Demaille  <akim.demaille@free.fr>
+
 	UVariable::UVarSet
 	* src/utypes.hh (UVarSet): Move to...
 	* src/uvariable.hh (UVariable::UVarSet): here.
